<resources>
    <string name="app_name">Ahorra</string>
    <string name="carLblInicio">Iniciando ...</string>
    <string name="sesTxtCorreo">Correo</string>
    <string name="sesTxtClave">Clave</string>
    <string name="sesChkRecordar">Recordar sesión</string>
    <string name="sesBtnIngresar">Ingresar</string>
    <string name="sesBtnSalir">Salir</string>
    <string name="sesLblRegistro">Registrate</string>
    <string name="regTxtDni">Dni</string>
    <string name="regTxtNombre">Nombre</string>
    <string name="regTxtApellido">Apellido</string>
    <string name="regBtnCamara">Camara</string>
    <string name="regTxtFechaNac">Fecha de Nacimiento</string>
    <string name="regLblTitulo">REGISTRO</string>
    <string name="lblSexo">Sleccione su sexo</string>
    <string name="regRbtNoDefinido">Sin Definir</string>
    <string name="regRbtMasculino">Masculino</string>
    <string name="regRbtFemenino">Femenino</string>
    <string name="regTxtCorreo">Correo</string>
    <string name="regTxtClave">Clave</string>
    <string name="regTxtClave2">Confirmar Clave</string>
    <string name="lblDistrito">distrito:</string>
    <string name="regChkTerminos">Terminos y condiciones</string>
    <string name="regBtnCrear">Crear</string>
    <string name="regBtnRegresar">Regresar</string>
    <string name="txtSaldo">S/ 1250.00</string>
    <string name="txtIngresos">S/ 2500.00</string>
    <string name="txtGastos">S/ 1250.00</string>
    <string name="txtPorcentaje">60%</string>
    <string name="txtInicio">S/600.00</string>
    <string name="txtFinal">S/1000.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RegGasBtnGasto">Gasto</string>
    <string name="RegGasBtnIngreso">Ingreso</string>
    <string name="txRegistroGastos">S/150.00</string>
    <string name="RegGasBtnRegistrarGasto">Registrar Gasto</string>
    <string name="txRegistroIngresos">S/1000.00</string>
    <string name="RegGasBtnRegistrarIngreso">Registrar Ingreso</string>
    <string name="txtResumenAhorros">S/1250.00</string>
    <string name="BtnCrearNuevaMeta">+ Crear Nueva Meta</string>
    <string name="inicio">Inicio</string>
    <string name="metas">Metas</string>
    <string name="aprender">aprender</string>
    <string name="historial">historial</string>
    <string name="abrir_metas">+</string>
    <string name="txtLblPreferencias">Preferencias</string>
    <string name="bieLblSaludo">Bienvenido</string>
    <string name="Progreso_perol">35% de la academia completada</string>
    <string name="HistTxtBusqueda">Buscar transacción...</string>
    <string name="Perfil">Perfil</string>
    <string name="bio_titulo">Biometric Log In</string>
    <string name="bio_subtitulo">Log in using your fingerprint</string>
    <string name="bio_boton_negativo">Use password</string>
    <string name="bio_error_no_hardware">This device does not have a fingerprint sensor</string>
    <string name="bio_error_no_registradas">No fingerprints enrolled. Please enroll one in Settings.</string>
    <string name="bio_exito">Authentication successful</string>
    <string name="bio_fallo">Fingerprint not recognized</string>
    <string name="bio_error">Authentication error: %1$s</string>
    <string name="bio_error_no_sesion">Log in with your password at least once to enable fingerprint.</string>
    <string name="Mapa">MAPA</string>


    <!-- Arrays para los Spinners de Preferencias -->
    <string-array name="idiomas_nombres">
        <item>Español</item>
        <item>English</item>
    </string-array>

    <string-array name="idiomas_codigos">
        <item>es</item> <!-- Código para Español -->
        <item>en</item> <!-- Código para Inglés -->
    </string-array>

    <string-array name="monedas_array">
        <item>PEN - Sol Peruano</item>
        <item>USD - Dólar Americano</item>
        <item>EUR - Euro</item>
    </string-array>
</resources>